--- a/fred.html
+++ b/fred.html
@@ -239,6 +239,11 @@ Get this from the settings area when logged into <a href="http://particle.io/bui
 }">
 
 
+<input type="button" value="digitalWrite(a5, 155);" onClick="{
+    sendToParticle('digitalWrite(a5, 155);')
+}">
+
+
 <input type="button" value="digitalWrite(a5, 0);" onClick="{
     sendToParticle('digitalWrite(a5, 0);')
 }"><br><br>
