--- a/fred.html
+++ b/fred.html
@@ -234,18 +234,18 @@ Get this from the settings area when logged into <a href="http://particle.io/bui
 
 
 
-<input type="button" value="digitalWrite(a5, 255);" onClick="{
-    sendToParticle('digitalWrite(a5, 255);')
+<input type="button" value="analogWrite(a5, 255);" onClick="{
+    sendToParticle('analogWrite(a5, 255);')
 }">
 
 
-<input type="button" value="digitalWrite(a5, 155);" onClick="{
-    sendToParticle('digitalWrite(a5, 155);')
+<input type="button" value="analogWrite(a5, 155);" onClick="{
+    sendToParticle('analogWrite(a5, 155);')
 }">
 
 
-<input type="button" value="digitalWrite(a5, 0);" onClick="{
-    sendToParticle('digitalWrite(a5, 0);')
+<input type="button" value="analogWrite(a5, 0);" onClick="{
+    sendToParticle('analogWrite(a5, 0);')
 }"><br><br>
 
 
