--- a/fred.html
+++ b/fred.html
@@ -243,6 +243,14 @@ Get this from the settings area when logged into <a href="http://particle.io/bui
     sendToParticle('analogWrite(a5, 155);')
 }">
 
+   
+
+<input type="button" value="analogWrite(a5, 155);" onClick="{
+    sendToParticle('analogWrite(a5, 155);')
+}">
+   
+   
+   
 
 <input type="button" value="analogWrite(a5, 0);" onClick="{
     sendToParticle('analogWrite(a5, 0);')
