--- a/fred.html
+++ b/fred.html
@@ -257,6 +257,8 @@ Get this from the settings area when logged into <a href="http://particle.io/bui
 }"><br><br>
 
 
-
+<input type="button" value="analogRead(a3);" onClick="{
+    sendToParticle('analogRead(a5);')
+}"><br><br>
 
 
